[package]
name = "opentelemetry-etw-trace"
description = "OpenTelemetry logs exporter to ETW (Event Tracing for Windows)"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-logs"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-logs"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry_sdk = { version = "0.29", features = ["logs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "v5"] }
tracing = "0.1"

[dev-dependencies]
opentelemetry_sdk = { version = "0.29", features = ["trace"] }
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
