[package]
name = "opentelemetry-etw-trace"
description = "OpenTelemetry trace exporter to ETW (Event Tracing for Windows)"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-trace"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-trace"
readme = "README.md"
rust-version = "1.75.0"
keywords = ["opentelemetry", "trace", "etw"]
license = "Apache-2.0"

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
tracelogging_dynamic = "1.2.1"
async-trait = "0.1"
futures-core = "0.3"

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["trace"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = []

[lints]
workspace = true
