[package]
name = "opentelemetry-etw-trace"
description = "OpenTelemetry logs exporter to ETW (Event Tracing for Windows)"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-logs"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-etw-logs"
readme = "README.md"
rust-version = "1.75.0"
keywords = ["opentelemetry", "log", "trace", "etw"]
license = "Apache-2.0"

[dependencies]
futures-executor = "0.3.31"
tracelogging = "1.2.1"
tracelogging_dynamic = "1.2.1"
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { version = "0.29", features = ["logs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
opentelemetry_sdk = { version = "0.29", features = ["trace"] }
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true